--- a/front/header.html
+++ b/front/header.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HDC</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<header>
         <h2><a href="home.php">icon</a></h2>
         <nav class="nav">
-            <ul class="nav-ul">
+            <ul class="ul">
                 <li class="searchList">
                     <div class="search-inner">
-                    <form action="../back/item.php" method="post">
-                        <input type="text" class="search" placeholder="検索" name="search"> 
+                    <form action="search.php" method="post">
+                        <input type="text" class="search" placeholder="検索"> 
                         <button type="submit"><img src="image/search.png" class="searchIcon"></button>
                     </form>
                     </div>
@@ -30,3 +30,5 @@
         </nav>
     </header>
 <body>
+
+
