--- a/front/header.html
+++ b/front/header.html
@@ -24,11 +24,11 @@
                     <li class="navIcon"><a href="#" class="navLink">お知らせ</a></li>
                     <li class="navIcon"><a href="#" class="navLink"><img src="image/star.png" class="navImage" alt="star">お気に入り</a></li>
                     <li class="navIcon"><a href="#" class="navLink">カート</a></li>
-                    <li class="navIcon"><a href="#" class="navLink">アカウント</a></li>
+                    <li class="navIcon"><a href="customer-menu.php" class="navLink">アカウント</a></li>
                 </div>
             </ul>
         </nav>
     </header>
 <body>
-
+    <main>
 
