--- a/front/header2.html
+++ b/front/header2.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 	<header>
-        <h2><a href="main.php">icon</a></h2>
+        <h2><a href="home.php">icon</a></h2>
     </header>
 <body>
+    <main>
 
 
