--- a/front/footer.html
+++ b/front/footer.html
@@ -2,5 +2,5 @@
 <footer class="footer">
 </footer>
 </body>
-<script src="script/script.js"></script>
+<script src="../script/script.js"></script>
 </html>
