--- a/front/header2.html
+++ b/front/header2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-        <h2><a href="home.php">icon</a></h2>
+        <h2><a href="home.php"><img src="../image/icon.png"></a></h2>
     </header>
 <body>
     <main>
