--- a/front/header.html
+++ b/front/header.html
@@ -23,7 +23,7 @@
                     <li class="navIcon"><a href="#" class="navLink">出品</a></li>
                     <li class="navIcon"><a href="#" class="navLink">お知らせ</a></li>
                     <li class="navIcon"><a href="#" class="navLink"><img src="image/star.png" class="navImage" alt="star">お気に入り</a></li>
-                    <li class="navIcon"><a href="../back/cart.php" class="navLink">カート</a></li>
+                    <li class="navIcon"><a href="cart.php" class="navLink">カート</a></li>
                     <li class="navIcon"><a href="customer-menu.php" class="navLink">アカウント</a></li>
                 </div>
             </ul>
