--- a/front/header2.html
+++ b/front/header2.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<header>
-        <h2><a href="home.php">icon</a></h2>
+        <a href="home.php"><img src="image/icom.png" alt="icon" class="icon"></a>
     </header>
 <body>
     <main>
