--- a/front/header-admin.html
+++ b/front/header-admin.html
@@ -3,24 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HDC</title>
+    <link rel="stylesheet" href="css/style-admin.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.0/css/all.css">
+    <title>HDC</title>
 </head>
 <body>
-	<header>
-        <a href="home.php"><img src="image/icom.png" alt="icon" class="icon"></a>
+    <header>
+        <a href="home-admin.php"><img src="image/icom.png" alt="icon" class="icon"></a>
         <nav class="nav">
             <ul class="ul">
                 <div class="RightLi">
-                    <li class="navIcon"><a href="#" class="navLink">出品</a></li>
-                    <li class="navIcon"><a href="#" class="navLink"><i class="fas fa-bell fa-1x"></i>お知らせ</a></li>
-                    <li class="navIcon"><a href="#" class="navLink"><i class="far fa-star fa-1x"></i>お気に入り</a></li>
-                    <li class="navIcon"><a href="#" class="navLink"><i class="fa-solid fa-cart-shopping fa-1x"></i>カート</a></li>
                     <li class="navIcon"><a href="customer-menu.php" class="navLink"><i class="far fa-user-circle fa-1x"></i>アカウント</a></li>
                 </div>
             </ul>
         </nav>
     </header>
     <main>
-
