--- a/front/header2.html
+++ b/front/header2.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.0/css/all.css">
 </head>
 <body>
 	<header>
-        <h2><a href="home.php"><img src="../image/icon.png"></a></h2>
+        <a href="home.php"><img src="image/icom.png" alt="icon" class="icon"></a>
     </header>
-<body>
     <main>
 
 
