--- a/front/header.html
+++ b/front/header.html
@@ -34,7 +34,7 @@
       </svg>
       お気に入り
     </a>
-    <a href="#" title="カート" style="color:#000; font-size:12px; text-decoration:none; display:flex; flex-direction:column; align-items:center; gap:4px; cursor:pointer; min-width:46px;">
+    <a href="cart.php" title="カート" style="color:#000; font-size:12px; text-decoration:none; display:flex; flex-direction:column; align-items:center; gap:4px; cursor:pointer; min-width:46px;">
       <svg viewBox="0 0 24 24" aria-hidden="true" style="width:24px; height:24px; stroke:#000; stroke-width:1.8; fill:none; stroke-linecap:round; stroke-linejoin:round;">
         <circle cx="9" cy="21" r="1"/>
         <circle cx="20" cy="21" r="1"/>
@@ -42,7 +42,7 @@
       </svg>
       カート
     </a>
-    <a href="#" title="アカウント" style="color:#000; font-size:12px; text-decoration:none; display:flex; flex-direction:column; align-items:center; gap:4px; cursor:pointer; min-width:46px;">
+    <a href="customer-menu.php" title="アカウント" style="color:#000; font-size:12px; text-decoration:none; display:flex; flex-direction:column; align-items:center; gap:4px; cursor:pointer; min-width:46px;">
       <svg viewBox="0 0 24 24" aria-hidden="true" style="width:24px; height:24px; stroke:#000; stroke-width:1.8; fill:none; stroke-linecap:round; stroke-linejoin:round;">
         <circle cx="12" cy="7" r="4"/>
         <path d="M5.5 21a7.5 7.5 0 0113 0"/>
