--- a/front/header.html
+++ b/front/header.html
@@ -1,8 +1,10 @@
 <header style="background-color:#dbe4fd; padding:10px 16px; display:flex; align-items:center; gap:20px;">
   <!-- ロゴのみ表示 -->
+   <a href="home.php">
   <div style="background:#6fa0db; padding:8px 12px; border-radius:4px; display:flex; align-items:center; user-select:none; flex-shrink:0;">
     <img src="icon.png" alt="HDCロゴ" style="width:48px; height:48px; object-fit:contain; display:block;" />
   </div>
+  </a>
 
   <!-- 検索ボックス -->
   <div style="position:relative; flex-grow:1; max-width:400px;">
