--- a/front/list-admin.html
+++ b/front/list-admin.html
@@ -1,25 +1,15 @@
-<!-- ハンバーガーボタンとメニュー -->
-<button id="menu-toggle" class="menu-button" aria-expanded="false" aria-controls="side-menu"> 
-    <!-- バー -->
-    <span class="bar"></span>
-    <span class="bar"></span>
-    <span class="bar"></span>
-</button>
-
 <!-- サイドメニュー本体 -->
-<nav class="menu-button" id="side-menu">
-    <div class="menu-item">
-        <strong>並び替え</strong><br>
+<nav class="admin-nav">
+        <ul class="menu-ul">
             <li  class="list-admin"><a href="#" class="list-hover">ホーム</a></li>
-                <select>
-                    <option selected disabled>商品管理</option>
-                    <a href="#"><option>商品登録</option></a>
-                    <a href="#"><option>商品マスター</option></a>
+                <select class="list-admin" id="link-selector" onchange="navigateToUrl(this)">
+                    <option disabled id="">商品管理</option>
+                    <option value="#">商品登録</option>
+                    <option value="#">商品マスター</option>
                 </select>
             </li>
             <li  class="list-admin"><a href="#" class="list-hover">不用品管理</a></li>
             <li  class="list-admin"><a href="#" class="list-hover">コンテンツ管理</a></li>
             <li  class="list-admin"><a href="#" class="list-hover">基本情報設定</a></li>
         </ul>
-    </div>
 </nav>
