--- a/front/header-admin.html
+++ b/front/header-admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style-admin.css">
+    <link rel="stylesheet" href="css/admin-style.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.0/css/all.css">
     <title>HDC</title>
@@ -14,7 +14,7 @@
         <nav class="nav">
             <ul class="ul">
                 <div class="RightLi">
-                    <li class="navIcon"><a href="customer-menu.php" class="navLink"><i class="far fa-user-circle fa-1x"></i>アカウント</a></li>
+                    <li class="navIcon"><a href="customer-menu.php" class="navLink"><i class="far fa-user-circle fa-2x"></i>アカウント</a></li>
                 </div>
             </ul>
         </nav>
