--- a/front/list-admin.html
+++ b/front/list-admin.html
@@ -11,5 +11,6 @@
             <li  class="list-admin"><a href="#" class="list-hover">不用品管理</a></li>
             <li  class="list-admin"><a href="#" class="list-hover">コンテンツ管理</a></li>
             <li  class="list-admin"><a href="#" class="list-hover">基本情報設定</a></li>
+            <li  class="list-admin"><a href="#" class="list-hover">システム情報管理</a></li>
         </ul>
 </nav>
