--- a/front/header.html
+++ b/front/header.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HDC</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v7.1.0/css/all.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
                     <li class="navIcon"><a href="#" class="navLink">出品</a></li>
                     <li class="navIcon"><a href="#" class="navLink"><i class="fas fa-bell fa-1x"></i>お知らせ</a></li>
                     <li class="navIcon"><a href="#" class="navLink"><i class="far fa-star fa-1x"></i>お気に入り</a></li>
-                    <li class="navIcon"><a href="#" class="navLink"><i class="fa-solid fa-cart-shopping fa-1x"></i>カート</a></li>
+                    <li class="navIcon"><a href="cart.php" class="navLink"><i class="fa-solid fa-cart-shopping fa-1x"></i>カート</a></li>
                     <li class="navIcon"><a href="customer-menu.php" class="navLink"><i class="far fa-user-circle fa-1x"></i>アカウント</a></li>
                 </div>
             </ul>
