画像を出力できるようにした

--- a/front/header-admin.html
+++ b/front/header-admin.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="home-admin.php"><img src="image/icom.png" alt="icon" class="icon"></a>
+        <a href="home-admin.php"><img src="../image/icon.png" alt="icon" class="icon"></a>
         <nav class="nav">
             <ul class="ul">
                 <div class="RightLi">
