--- a/front/header.html
+++ b/front/header.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header>
-        <h2><img src="icon.png"><a href="home.php">icon</a></h2>
+        <h2><img src="../image/icon.png" class="icon"><a href="home.php"></a></h2>
         <nav class="nav">
             <ul class="ul">
                 <li class="searchList">
