--- a/front/header2.html
+++ b/front/header2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<header>
-        <a href="home.php"><img src="image/icom.png" alt="icon" class="icon"></a>
+        <a href="home.php"><img src="../image/icon.png" alt="icon" class="icon"></a>
     </header>
     <main>
 
