--- a/front/header2.html
+++ b/front/header2.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HDC</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.0/css/all.css">
 </head>
 <body>
 	<header>
-        <a href="home.php"><img src="../image/icon.png" alt="icon" class="icon"></a>
+        <h2><a href="home.php"><img src="../image/icon.png" class="icon"></a></h2>
     </header>
     <main>
 
