--- a/front/header.html
+++ b/front/header.html
@@ -17,7 +17,7 @@
                     <div class="search-inner">
                     <form action="search.php" method="post">
                         <input type="text" class="search" placeholder="検索"> 
-                        <button type="submit"><img src="image/search.png" class="searchIcon"></button>
+                        <button type="submit"><img src="../image/search.png" class="searchIcon"></button>
                     </form>
                     </div>
                 </li>
