--- a/front/list.html
+++ b/front/list.html
@@ -15,19 +15,18 @@
                 <li>縦　<input type="number" name="height" min="0" class="size">cm</li>
                 <li>横　<input type="number" name="width" min="0" class="size">cm</li>
                 <button type="submit" class="menu-btn">検索</button>
-            </form>
         </ul>
+         </form>
+
         <strong>カテゴリー</strong><br>
-        
         <ul class="menu-ul a">
-                <li><label class="menu-hover"><input type="radio" name="quality" value="">大型製品 </label> </li>
-                <li><label class="menu-hover"><input type="radio" name="quality" value="">小型製品 </label> </li>
+                <li><label class="menu-hover"><input type="radio" name="category" value="大型製品">大型製品 </label> </li>
+                <li><label class="menu-hover"><input type="radio" name="category" value="小型製品">小型製品 </label> </li>
 
             </ul>
         <strong>品質</strong><br>
         <ul class="menu-ul a">
-            <li><label class="menu-hover"><input type="radio" name="quality" value="">良品</label></li>
-            <li><label class="menu-hover"><input type="radio" name="quality" value="">並品</label></li>
+            <li><label class="menu-hover"><input type="radio" name="quality" value="良品">良品</label></li>
             <li><label class="menu-hover"><input type="radio" name="quality" value="">雑あり</label></li>
         </ul>
     </div>
