systemInformation.phpとaddress.phpの追加、cssの修正

--- a/front/list-admin.html
+++ b/front/list-admin.html
@@ -3,14 +3,14 @@
         <ul class="menu-ul">
             <a href="home-admin.php" class="list-hover"><li  class="list-admin">ホーム</li></a>
             <li>
-                <select id="link-selector" class="list-admin" onchange="navigateToUrl(this)">
+                <select id="link-selector" class="list-admin select" onchange="navigateToUrl(this)">
                     <option disabled selected>商品管理</option>
                     <option value="product.php">商品登録</option>
                     <option value="#">商品マスター</option>
                 </select>
             </li>
             <li>
-                <select class="list-admin" id="link-selector" onchange="navigateToUrl(this)">
+                <select class="list-admin select" id="link-selector" onchange="navigateToUrl(this)">
                     <option disabled selected>コンテンツ管理</option>
                     <option value="#">ページ管理</option>
                     <option value="#">お知らせ管理</option>
