--- a/front/list.html
+++ b/front/list.html
@@ -11,7 +11,7 @@
     <div class="menu-item">
         <strong>サイズ</strong><br>
         <ul class="menu-ul a">
-            <form action="search.php" method="post" style="display: flex; flex-wrap: wrap;">
+            <form action="#" method="post" style="display: flex; flex-wrap: wrap;">
                 <li>縦　<input type="number" name="height" min="0" class="size">cm</li>
                 <li>横　<input type="number" name="width" min="0" class="size">cm</li>
                 <button type="submit" class="menu-btn">検索</button>
