--- a/front/header-admin.html
+++ b/front/header-admin.html
@@ -14,7 +14,7 @@
         <nav class="nav">
             <ul class="ul">
                 <div class="RightLi">
-                    <li class="navIcon"><a href="accountInformation.php" class="navLink"><i class="far fa-user-circle fa-1x"></i>アカウント</a></li>
+                    <li class="navIcon"><a href="customer-menu.php" class="navLink"><i class="far fa-user-circle fa-1x"></i>アカウント</a></li>
                 </div>
             </ul>
         </nav>
