--- a/front/list-admin.html
+++ b/front/list-admin.html
@@ -13,11 +13,11 @@
                 <select class="list-admin select" id="link-selector" onchange="navigateToUrl(this)">
                     <option disabled selected>コンテンツ管理</option>
                     <option value="#">ページ管理</option>
-                    <option value="#">お知らせ管理</option>
+                    <option value="notice.php">お知らせ管理</option>
                 </select>
             </li>
             <a href="#" class="list-hover"><li  class="list-admin">不用品管理</li></a>
             <a href="accountInformation.php" class="list-hover"><li  class="list-admin">基本情報設定</li></a>
-            <a href="#" class="list-hover"><li  class="list-admin">システム情報管理</li></a>
+            <a href="systemInformation.php" class="list-hover"><li  class="list-admin">システム情報管理</li></a>
         </ul>
 </nav>
