--- a/front/header3.html
+++ b/front/header3.html
@@ -13,11 +13,11 @@
         <nav class="nav">
             <ul class="ul">
                 <div class="RightLi">
-                    <li class="navIcon"><a href="#" class="navLink">出品</a></li>
-                    <li class="navIcon"><a href="news.php" class="navLink"><i class="fas fa-bell fa-1x"></i>お知らせ</a></li>
-                    <li class="navIcon"><a href="#" class="navLink"><i class="far fa-star fa-1x"></i>お気に入り</a></li>
-                    <li class="navIcon"><a href="cart.php" class="navLink"><i class="fa-solid fa-cart-shopping fa-1x"></i>カート</a></li>
-                    <li class="navIcon"><a href="customer-menu.php" class="navLink"><i class="far fa-user-circle fa-1x"></i>アカウント</a></li>
+                    <li class="navIcon"><a href="#" class="navLink black">出品</a></li>
+                    <li class="navIcon"><a href="news.php" class="navLink black"><i class="fas fa-bell fa-1x"></i>お知らせ</a></li>
+                    <li class="navIcon"><a href="#" class="navLink black"><i class="far fa-star fa-1x"></i>お気に入り</a></li>
+                    <li class="navIcon"><a href="cart.php" class="navLink black"><i class="fa-solid fa-cart-shopping fa-1x"></i>カート</a></li>
+                    <li class="navIcon"><a href="customer-menu.php" class="navLink black"><i class="far fa-user-circle fa-1x"></i>アカウント</a></li>
                 </div>
             </ul>
         </nav>
