--- a/front/header3.html
+++ b/front/header3.html
@@ -13,7 +13,7 @@
         <nav class="nav">
             <ul class="ul">
                 <div class="RightLi">
-                    <li class="navIcon"><a href="#" class="navLink">出品</a></li>
+                    <li class="navIcon"><a href="#" class="navIcon"><i class="fas fa-cube">出品</i></a></li>
                     <li class="navIcon"><a href="news.php" class="navLink"><i class="fas fa-bell fa-1x"></i>お知らせ</a></li>
                     <li class="navIcon"><a href="#" class="navLink"><i class="far fa-star fa-1x"></i>お気に入り</a></li>
                     <li class="navIcon"><a href="cart.php" class="navLink"><i class="fa-solid fa-cart-shopping fa-1x"></i>カート</a></li>
