--- a/front/header.html
+++ b/front/header.html
@@ -23,7 +23,7 @@
                     </div>
                 </li>
                 <div class="RightLi">
-                    <li class="navIcon"><a href="#" class="navLink black">出品</a></li>
+                    <li class="navIcon"><a href="#" class="navIcon"><i class="fas fa-cube">出品</i></a></li>
                     <li class="navIcon"><a href="news.php" class="navLink black"><i class="fas fa-bell fa-1x"></i>お知らせ</a></li>
                     <li class="navIcon"><a href="#" class="navLink black"><i class="far fa-star fa-1x"></i>お気に入り</a></li>
                     <li class="navIcon"><a href="cart.php" class="navLink black"><i class="fa-solid fa-cart-shopping fa-1x"></i>カート</a></li>
