不用品の出品、確認、詳細画面、その他修正

--- a/front/list-admin.html
+++ b/front/list-admin.html
@@ -9,7 +9,7 @@
                     <option value="product-search.php">商品マスター</option>
                 </select>
             </li>
-            <a href="#" class="list-hover black"><li  class="list-admin">不用品管理</li></a>
+            <a href="unused-admin.php" class="list-hover black"><li  class="list-admin">不用品管理</li></a>
             <a href="accountInformation.php" class="list-hover black"><li  class="list-admin">基本情報設定</li></a>
             <a href="systemInformation.php" class="list-hover black"><li  class="list-admin">システム情報管理</li></a>
         </ul>
