--- a/front/list.html
+++ b/front/list.html
@@ -20,8 +20,9 @@
         <strong>品質</strong><br>
         <ul class="menu-ul a">
             <li><label class="menu-hover"><input type="radio" name="quality" value="">良品</label></li>
-            <li><label class="menu-hover"><input type="radio" name="quality" value="">並品</label></li>
-            <li><label class="menu-hover"><input type="radio" name="quality" value="">雑あり</label></li>
+            <form action="listing.php" method="post">
+            <li><label class="menu-hover"><button type="submit" name="quality" value="出品一覧"></label></li>
+                </form>
         </ul>
     </div>
 </nav>
