出品ボタンにリンクを追加

--- a/front/header.html
+++ b/front/header.html
@@ -1,4 +1,3 @@
-</header>
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -23,7 +22,7 @@
                     </div>
                 </li>
                 <div class="RightLi">
-                    <li class="navIcon"><a href="#" class="navLink black"><i class="fas fa-cube fa-1x"></i>出品</a></li>
+                    <li class="navIcon"><a href="listing.php" class="navLink black"><i class="fas fa-cube fa-1x"></i>出品</a></li>
                     <li class="navIcon"><a href="news.php" class="navLink black"><i class="fas fa-bell fa-1x"></i>お知らせ</a></li>
                     <li class="navIcon"><a href="#" class="navLink black"><i class="far fa-star fa-1x"></i>お気に入り</a></li>
                     <li class="navIcon"><a href="cart.php" class="navLink black"><i class="fas fa-shopping-cart fa-1x"></i>カート</a></li>
@@ -32,5 +31,5 @@
             </ul>
         </nav>
     </header>
-    <body>
-        <main>
+</body>
+</html>
