--- a/front/list.html
+++ b/front/list.html
@@ -11,18 +11,16 @@
     <div class="menu-item">
         <strong>サイズ</strong><br>
         <ul class="menu-ul a">
-            <form action="#" method="post" style="display: flex; flex-wrap: wrap;">
+            <form action="../back/product-display.php" method="post" style="display: flex; flex-wrap: wrap;">
                 <li>縦　<input type="number" name="height" min="0" class="size">cm</li>
                 <li>横　<input type="number" name="width" min="0" class="size">cm</li>
                 <button type="submit" class="menu-btn">検索</button>
-            </form>
         </ul>
         <strong>品質</strong><br>
         <ul class="menu-ul a">
             <li><label class="menu-hover"><input type="radio" name="quality" value="">良品</label></li>
-            <form action="listing.php" method="post">
             <li><label class="menu-hover"><button type="submit" name="quality" value="出品一覧"></label></li>
-                </form>
+            </form>
         </ul>
     </div>
 </nav>
