--- a/front/header.html
+++ b/front/header.html
@@ -1,3 +1,4 @@
+</header>
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -15,7 +16,7 @@
             <ul class="ul">
                 <li class="searchList">
                     <div class="search-inner">
-                    <form action="search.php" method="post">
+                    <form action="#" method="post">
                         <input type="text" class="search" placeholder="検索"> 
                         <button type="submit"><img src="../image/search.png" class="searchIcon"></button>
                     </form>
@@ -24,12 +25,11 @@
                 <div class="RightLi">
                     <li class="navIcon"><a href="listing.php" class="navLink black"><i class="fas fa-cube fa-1x"></i>出品</a></li>
                     <li class="navIcon"><a href="news.php" class="navLink black"><i class="fas fa-bell fa-1x"></i>お知らせ</a></li>
-                    <li class="navIcon"><a href="#" class="navLink black"><i class="far fa-star fa-1x"></i>お気に入り</a></li>
                     <li class="navIcon"><a href="cart.php" class="navLink black"><i class="fas fa-shopping-cart fa-1x"></i>カート</a></li>
                     <li class="navIcon"><a href="customer-menu.php" class="navLink black"><i class="far fa-user-circle fa-1x"></i>アカウント</a></li>
                 </div>
             </ul>
         </nav>
     </header>
-</body>
-</html>
+    <body>
+        <main>
