消されていたやつを復活

--- a/front/header3.html
+++ b/front/header3.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<header>
-        <h2><a href="home.php"><img src="../image/icon.png" class="icon"></a></h2>
+        <h2><a href="home-sample.php"><img src="../image/icon.png" class="icon"></a></h2>
         <nav class="nav">
             <ul class="ul">
                 <div class="RightLi">
