--- a/front/header.html
+++ b/front/header.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<header>
-        <h2><a href="home.php"><img src="../image/icon.png" class="icon"></a></h2>
+        <h2><a href="home-sample.php"><img src="../image/icon.png" class="icon"></a></h2>
         <nav class="nav">
             <ul class="ul">
                 <li class="searchList">
