cssの修正、homeにcssの追加

--- a/front/header.html
+++ b/front/header.html
@@ -16,7 +16,7 @@
             <ul class="ul">
                 <li class="searchList">
                     <div class="search-inner">
-                    <form action="#" method="post">
+                    <form action="../back/search.php" method="post">
                         <input type="text" class="search" placeholder="検索"> 
                         <button type="submit"><img src="../image/search.png" class="searchIcon"></button>
                     </form>
