--- a/front/header.html
+++ b/front/header.html
@@ -16,8 +16,8 @@
             <ul class="ul">
                 <li class="searchList">
                     <div class="search-inner">
-                    <form action="../back/search.php" method="post">
-                        <input type="text" class="search" placeholder="検索"> 
+                    <form action="../back/product-display.php" method="post">
+                        <input type="text" class="keyword" placeholder="検索"> 
                         <button type="submit"><img src="../image/search.png" class="searchIcon"></button>
                     </form>
                     </div>
