--- a/front/list.html
+++ b/front/list.html
@@ -10,7 +10,7 @@
 <nav class="menu" id="side-menu">
     <div class="menu-item">
         <strong>サイズ</strong><br>
-        <form action="../back/product-display.php" method="post" style="display: flex; flex-wrap: wrap;">
+        <form action="home-sample.php" method="post" style="display: flex; flex-wrap: wrap;">
             <ul class="menu-ul a">
                 <li>縦　<input type="number" name="height" min="0" class="size">cm</li>
                 <li>横　<input type="number" name="width" min="0" class="size">cm</li>
