--- a/front/header.html
+++ b/front/header.html
@@ -17,7 +17,7 @@
                 <li class="searchList">
                     <div class="search-inner">
                     <form action="home-sample.php" method="post">
-                        <input type="text" class="keyword" placeholder="検索"> 
+                        <input type="text" class="search" placeholder="検索" name="keyword"> 
                         <button type="submit"><img src="../image/search.png" class="searchIcon"></button>
                     </form>
                     </div>
