--- a/front/list.html
+++ b/front/list.html
@@ -17,13 +17,13 @@
             </ul>
             <strong>ジャンル１</strong><br>
             <ul class="menu-ul a">
-                <li><label class="menu-hover"><input type="radio" name="genre" value="大型製品">大型製品</label></li>
-                <li><label class="menu-hover"><input type="radio" name="genre" value="小型製品">小型製品</label></li>
+                <li><label class="menu-hover"><input type="radio" name="brand" value="大型製品">大型製品</label></li>
+                <li><label class="menu-hover"><input type="radio" name="brand" value="小型製品">小型製品</label></li>
             </ul>
             <strong>ジャンル２</strong><br>
             <ul class="menu-ul a">
-                <li><label class="menu-hover"><input type="radio" name="quality" value="1">公式商品</label></li>
-                <li><label class="menu-hover"><input type="radio" name="quality" value="2">個人商品</label></li>
+                <li><label class="menu-hover"><input type="radio" name="be_solditem" value="1">公式商品</label></li>
+                <li><label class="menu-hover"><input type="radio" name="be_solditem" value="2">個人商品</label></li>
             </ul>
             <button type="submit" class="menu-btn">検索</button>
         </form>
