--- a/front/list.html
+++ b/front/list.html
@@ -10,20 +10,20 @@
 <nav class="menu" id="side-menu">
     <div class="menu-item">
         <strong>サイズ</strong><br>
-        <form action="home-sample.php" method="post" style="display: flex; flex-wrap: wrap;">
+        <form action="home-sample.phpp" method="post" style="display: flex; flex-wrap: wrap;">
             <ul class="menu-ul a">
                 <li>縦　<input type="number" name="height" min="0" class="size">cm</li>
                 <li>横　<input type="number" name="width" min="0" class="size">cm</li>
             </ul>
             <strong>ジャンル１</strong><br>
             <ul class="menu-ul a">
-                <li><label class="menu-hover"><input type="radio" name="brand" value="大型製品">大型製品</label></li>
-                <li><label class="menu-hover"><input type="radio" name="brand" value="小型製品">小型製品</label></li>
+                <li><label><input type="radio" name="brand" value="大型製品">大型製品</label></li>
+                <li><label><input type="radio" name="brand" value="小型製品">小型製品</label></li>
             </ul>
             <strong>ジャンル２</strong><br>
             <ul class="menu-ul a">
-                <li><label class="menu-hover"><input type="radio" name="be_solditem" value="1">公式商品</label></li>
-                <li><label class="menu-hover"><input type="radio" name="be_solditem" value="2">個人商品</label></li>
+                <li><label><input type="radio" name="be_solditem" value="1">公式商品</label></li>
+                <li><label><input type="radio" name="be_solditem" value="2">個人商品</label></li>
             <button type="submit" class="menu-btn">検索</button>
         </form>
     </div>
