--- a/front/header.html
+++ b/front/header.html
@@ -16,7 +16,7 @@
                 <li class="searchList">
                     <div class="search-inner">
                     <form action="../back/search.php" method="post">
-                        <input type="text" class="search" placeholder="検索"> 
+                        <input type="text" name="search" class="search" placeholder="検索"> 
                         <button type="submit"><img src="../image/search.png" class="searchIcon"></button>
                     </form>
                     </div>
