一応って感じ

--- a/front/list.html
+++ b/front/list.html
@@ -22,8 +22,8 @@
             </ul>
             <strong>ジャンル２</strong><br>
             <ul class="menu-ul a">
-                <li><label class="menu-hover"><input type="radio" name="be_solditem" value="1">公式商品</label></li>
-                <li><label class="menu-hover"><input type="radio" name="be_solditem" value="2">個人商品</label></li>
+                <li><label class="menu-hover"><input type="radio" name="notitem" value="1">公式商品</label></li>
+                <li><label class="menu-hover"><input type="radio" name="notitem" value="2">個人商品</label></li>
             <button type="submit" class="menu-btn">検索</button>
         </form>
     </div>
